# flagguard

./: .env.example  .flagguard.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FlagGuard_Consolidated_Docs.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  action.yml  compliance_audit_checklist.md  debug_auth.py  flagguard.db  flagguard_compliance_evaluation.md  flagguard_deep_compliance_audit_v2.md  migrate_db.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: codeql.yml  release.yml  security.yml  staging_deploy.yml  test.yml
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  CONTRIBUTING.md  INSTALLATION.md  api.md  user_guide.md
docs/help/: admin_guide.md  analyst_guide.md  viewer_guide.md
docs/legal/: acceptable_use.md  accessibility_statement.md  ai_transparency.md  data_inventory.md  privacy_policy.md  terms_of_service.md
examples/basic/: README.md  flags.json
examples/basic/src/: app.py
examples/configs/: generic_example.json  launchdarkly_example.json
examples/github-action/.github/workflows/: flagguard.yml
examples/python-sdk/: README.md  example.py
examples/source_code/: app.py
migrations/: env.py
notebooks/: flagguard_dpo_training.py  flagguard_sft_training.py  train_risk_model.py
schemas/: report.schema.json
scripts/: export_gguf.py  export_preferences.py  generate_sft_dataset.py  generate_training_data.py  verify_rag.py
spaces/: README.md  app.py  requirements.txt
src/flagguard/: __init__.py
src/flagguard/ai/: __init__.py  agent.py  graph.py  risk_explainer.py
src/flagguard/analysis/: __init__.py  conflict_detector.py  constraint_encoder.py  dead_code.py  path_analyzer.py  z3_wrapper.py
src/flagguard/api/: __init__.py  analytics.py  audit.py  auth.py  environments.py  flags.py  iac.py  lifecycle.py  plugins.py  projects.py  reports.py  risk.py  scans.py  scheduler.py  server.py  webhooks.py
src/flagguard/auth/: utils.py
src/flagguard/cli/: __init__.py  main.py
src/flagguard/core/: __init__.py  db.py  logging.py  models.py  orchestrator.py  roles.py
src/flagguard/core/models/: __init__.py  conflict.py  flag.py  tables.py  usage.py
src/flagguard/llm/: __init__.py  explainer.py  ollama_client.py  prompts.py
src/flagguard/parsers/: __init__.py  base.py  factory.py  generic.py  launchdarkly.py  unleash.py
src/flagguard/parsers/ast/: __init__.py  javascript.py  languages.py  python.py  scanner.py
src/flagguard/rag/: __init__.py  embeddings.py  engine.py  ingester.py  retriever.py  store.py
src/flagguard/reporters/: __init__.py  json_reporter.py  markdown.py
src/flagguard/scripts/: init_db.py
src/flagguard/sdk/: __init__.py  python_sdk.py
src/flagguard/services/: analysis.py  project.py  webhooks.py
src/flagguard/static/: fg-modals.js
src/flagguard/ui/: __init__.py  app.py  feedback.py  handlers.py  helpers.py  styles.py
src/flagguard/ui/tabs/: admin_dashboard.py  analyst_dashboard.py  chat.py  header.py  remediation.py  risk_dashboard.py  viewer_dashboard.py
tests/: __init__.py  conftest.py  test_ast_chunker.py  test_knowledge_graph.py  test_smoke.py
tests/api/: test_api.py
tests/fixtures/configs/: generic.json  generic_sample.json  launchdarkly.json  launchdarkly_sample.json  unleash_sample.yaml
tests/fixtures/source_code/javascript_sample/: app.js
tests/fixtures/source_code/python_sample/: app.py
tests/integration/: test_cli_rag.py  test_full_pipeline.py
tests/performance/: test_performance.py
tests/security/: test_security.py
tests/unit/: test_analysis.py  test_ast_extractors.py  test_parsers.py  test_rag.py  test_sat_solver.py
vscode-extension/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: codelens.ts  diagnostics.ts  extension.ts  flagguard.ts  hover.ts  statusbar.ts
