[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flagguard"
version = "0.1.0"
description = "AI Feature Flag Conflict Analyzer - Detect conflicts, impossible states, and dead code in feature flags"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "FlagGuard Team", email = "flagguard@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
keywords = ["feature-flags", "static-analysis", "SAT-solver", "launchdarkly", "unleash", "conflict-detection"]

dependencies = [
    "pyyaml>=6.0",
    "z3-solver>=4.12",
    "tree-sitter>=0.21",
    "tree-sitter-python>=0.21",
    "tree-sitter-javascript>=0.21",
    "networkx>=3.0",
    "click>=8.0",
    "rich>=13.0",
    "gradio>=4.0",
    "ollama>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
flagguard = "flagguard.cli.main:cli"

[project.urls]
Homepage = "https://github.com/yourusername/flagguard"
Documentation = "https://flagguard.readthedocs.io"
Repository = "https://github.com/yourusername/flagguard"
Issues = "https://github.com/yourusername/flagguard/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/flagguard"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["flagguard"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["tree_sitter", "tree_sitter_python", "tree_sitter_javascript", "ollama", "gradio", "z3"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/flagguard --cov-report=term-missing"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/flagguard"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
